feat: implement CircularProgress component for chat usage display, update UI to enhance summary card with circular progress visualization, and add localization keys for remaining messages

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -479,6 +479,7 @@
             "title": "Chat Usage",
             "summary": "Monthly Summary",
             "remaining": "{{remaining}} messages remaining",
+            "remainingShort": "remaining",
             "used": "{{used}} of {{limit}} messages used",
             "resetsOn": "Resets on {{date}}",
             "unlimitedHint": "Upgrade to Plus for more messages",
