refactor: streamline ChatUsageScreen and Subscription components by replacing TouchableOpacity with Button and SecondaryButton, enhance UI consistency, and update localization keys for improved clarity

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -693,6 +693,7 @@
         "restoreSuccess": "Purchases restored successfully",
         "restoreFailed": "No purchases to restore",
         "whatYouGet": "What you get with Trackr Plus",
+        "whatYouGetWith": "What you get with",
         "loadingOfferings": "Loading subscription options...",
         "noOfferingsAvailable": "No subscription options available",
         "errorLoadingOfferings": "Failed to load subscription options",
