feat: implement popular books section in Discover screen with infinite scrolling, enhance layout with grid display, and update localization for popular books

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -172,6 +172,10 @@
             "empty": "No lists found",
             "emptyDescription": "There are no public lists to display yet."
         },
+        "popular": {
+            "title": "Popular on Trackr",
+            "empty": "No popular books at the moment"
+        },
         "users": {
             "title": "Users"
         },
