feat: enhance Discover screen with lists functionality, including popular and recent lists sections, and implement tab navigation for books and lists

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -170,7 +170,9 @@
             "header": "Popular lists",
             "description": "Discover the lists created by the community",
             "empty": "No lists found",
-            "emptyDescription": "There are no public lists to display yet."
+            "emptyDescription": "There are no public lists to display yet.",
+            "recent": "Recent lists",
+            "popular": "Popular lists"
         },
         "popular": {
             "title": "Popular on Trackr",
