feat: add search functionality to followers and following screens, allowing users to filter lists by name, and update API queries to support search parameters

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -268,7 +268,11 @@
         "followingCount": "{{count}} following",
         "followingCount_other": "{{count}} following",
         "follow": "Follow",
-        "friends": "Friends"
+        "friends": "Friends",
+        "searchFollowers": "Search followers",
+        "searchFollowing": "Search following",
+        "noFollowersResults": "No followers found",
+        "noFollowingResults": "No following found"
     },
     "stats": {
         "title": "{{name}}'s stats",
