feat: integrate book details into review screens by displaying book title and cover, enhancing user experience in reviews, and update localization for review-related text

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -499,6 +499,8 @@
         "updateSuccess": "Review updated successfully!",
         "updateError": "Failed to update review",
         "reviewDetail": "Review",
+        "reviewOf": "Review of {{bookTitle}}",
+        "reviewsOf": "Reviews of {{bookTitle}}",
         "previousVersions": "Previous versions",
         "edited": "Edited",
         "version": "Version {{number}}",
