feat: add Read By section to book details screen, display followers who read the book, and update localization for related text

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -463,7 +463,10 @@
         "reviews": "Reviews",
         "seeAllReviews": "See all reviews",
         "viewMore": "View more",
-        "reviewDeleted": "Review deleted"
+        "reviewDeleted": "Review deleted",
+        "readBy": "Read by",
+        "following_singular": "following",
+        "following_plural": "followings"
     },
     "reviews": {
         "title": "Reviews",
