feat: add user reviews section to profiles, integrating review previews and navigation to detailed review screens, and update localization for review-related text

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -229,6 +229,13 @@
         "lists": "Lists",
         "seeAllLists": "See all lists",
         "noLists": "No lists",
+        "reviews": "Reviews",
+        "seeAllReviews": "See all reviews",
+        "noReviews": "No reviews",
+        "reviewsScreen": {
+            "title": "{{username}}'s reviews",
+            "noReviews": "No reviews yet"
+        },
         "seeMore": "See more",
         "seeLess": "See less",
         "editModal": {
